<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/editName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/label_name"
        android:text="" >
    </EditText>

    <EditText
        android:id="@+id/editHandicap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/label_handicap"
        android:inputType="numberDecimal"
        android:text="0" >

    </EditText>

    <EditText
        android:id="@+id/editCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/label_code"
        android:inputType="numberDecimal"
        android:text="" >
    </EditText>

    <Button
        android:id="@+id/buttonNewUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_user_add" />

</LinearLayout>